# saori-japanese-gengou

./: Cargo.toml  README.md
gengou_lists/: 001_asuka-nara-heian-kamakura.txt  002_hokutyou.txt  002_nantyou.txt  003_nanbokutyou-sengoku.txt  004_aduti-momoyama-edo.txt  005_meijiIkou.txt  README.md
src/: lib.rs  procedure.rs  represent.rs  search.rs  span.rs
